syntax = "proto3";

package user;

service UserService {
  rpc FindOne (UserById) returns (FindOneUserResponse);
  rpc FindMany (stream UserById) returns (stream FindManyUserResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}

message UserById {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 id = 3;
}

message FindOneUserResponse {
  int32 status = 1;
  repeated string error = 2;
  User data = 3;
}

message FindManyUserRequest {
  string name = 1;
  string email = 2;
}

message FindManyUserResponse {
  int32 status = 1;
  repeated string error = 2;
  repeated User data = 3;
}

